update goal and coins

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Match-3 twisted.loader.js";
+      var loaderUrl = buildUrl + "/WebGL Builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Match-3 twisted.data",
-        frameworkUrl: buildUrl + "/Match-3 twisted.framework.js",
-        codeUrl: buildUrl + "/Match-3 twisted.wasm",
+        dataUrl: buildUrl + "/WebGL Builds.data.br",
+        frameworkUrl: buildUrl + "/WebGL Builds.framework.js.br",
+        codeUrl: buildUrl + "/WebGL Builds.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Paired_Prototype",
